<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/computer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ivComputer"
            app:layout_constraintStart_toStartOf="@+id/ivComputer"
            app:layout_constraintTop_toBottomOf="@+id/ivComputer" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/player"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ivPlayer"
            app:layout_constraintStart_toStartOf="@+id/ivPlayer"
            app:layout_constraintTop_toBottomOf="@+id/ivPlayer" />

        <ImageView
            android:id="@+id/ivComputer"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTime"
            app:srcCompat="@drawable/paper" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs_text"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/ivComputer"
            app:layout_constraintEnd_toStartOf="@+id/ivPlayer"
            app:layout_constraintStart_toEndOf="@+id/ivComputer"
            app:layout_constraintTop_toTopOf="@+id/ivPlayer" />

        <TextView
            android:id="@+id/tvWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="128dp"
            android:text="result"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnPaper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPlayer"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:background="@color/colorPrimaryDark"
            android:scaleX="-1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTime"
            app:srcCompat="@drawable/paper" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/timestamp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>